--- a/public/assets/css/mobile.css
+++ b/public/assets/css/mobile.css
@@ -4,7 +4,7 @@
          background: #fafafa;
     }
 	.content-wrapper {
-    	 padding: 0 15px;
+    	 padding: 0 15px 0 20px;
 	}
 	.right-sec{
 		display: block;
